--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -44,5 +44,8 @@
         </button>
       </div>
     </div>
+    <h1 class="text-center text-3xl font-bold text-grey-100">
+      Flutter Developer
+    </h1>
   </body>
 </html>
